feat: add logs endpoints
GET /api/v1/logs/fail2ban
